--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,8 +30,8 @@
     </nav>
   </div>
 </header>
-<main>
-  <router-outlet></router-outlet>
+<main class="container">
+  <utf-register-category></utf-register-category>
 </main>
 <!-- rodape-->
 <footer class="page-footer my-primary-color">
