--- a/src/assets/libraries/materialize-sass/sass/components/_dropdown.scss
+++ b/src/assets/libraries/materialize-sass/sass/components/_dropdown.scss
@@ -48,7 +48,7 @@
       height: 18px;
     }
 
-    // Icon alignment override
+    // Category alignment override
     & > a > i {
       height: inherit;
       line-height: inherit;
