--- a/src/assets/libraries/materialize-sass/sass/components/_icons-material-design.scss
+++ b/src/assets/libraries/materialize-sass/sass/components/_icons-material-design.scss
@@ -1,4 +1,4 @@
-/* This is needed for some mobile phones to display the Google Icon font properly */
+/* This is needed for some mobile phones to display the Google Category font properly */
 .material-icons {
   text-rendering: optimizeLegibility;
   font-feature-settings: 'liga';
